# tauri-looper-project

./: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1717984291469-a4bcb82bfbff6.mjs
src/: .eslintrc.cjs  .prettierrc  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  main.rs
src/features/audio-clips/: AudioClips.tsx  AudioVisualization.tsx
src/features/audio-clips/models/: AudioClip.ts
src/shared/ui/: Header.tsx
