[package]
name = "rust-looper-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.13.4"
color-eyre = "0.5.11"
ringbuf = "0.3"
hound = "3.5.1"
dasp = {version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"] }
chrono = "0.4.19"
ctrlc = "3.2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
